src/test/snapshots/ruby_fast_lsp__test__integration_test__abc_const_ref.snap
---
source: src/test/integration_test.rs
expression: value
---
[
  {
    "range": {
      "end": {
        "character": 11,
        "line": 5
      },
      "start": {
        "character": 8,
        "line": 5
      }
    },
    "uri": "file://$PROJECT_ROOT/src/test/fixtures/goto/nested_const_single.rb"
  },
  {
    "range": {
      "end": {
        "character": 23,
        "line": 10
      },
      "start": {
        "character": 0,
        "line": 10
      }
    },
    "uri": "file://$PROJECT_ROOT/src/test/fixtures/goto/nested_const_single.rb"
  }
]
