src/test/snapshots/ruby_fast_lsp__test__integration_test__add_method_refs.snap
---
source: src/test/integration_test.rs
expression: value
---
[
  {
    "range": {
      "end": {
        "character": 26,
        "line": 22
      },
      "start": {
        "character": 13,
        "line": 22
      }
    },
    "uri": "file://$PROJECT_ROOT/src/test/fixtures/basic_method_refs.rb"
  }
]
