src/test/snapshots/ruby_fast_lsp__test__integration_test__alpha_namespace_ref.snap
---
source: src/test/integration_test.rs
expression: value
---
[
  {
    "range": {
      "end": {
        "character": 25,
        "line": 0
      },
      "start": {
        "character": 7,
        "line": 0
      }
    },
    "uri": "file://$PROJECT_ROOT/src/test/fixtures/goto/nested_const_single.rb"
  },
  {
    "range": {
      "end": {
        "character": 18,
        "line": 10
      },
      "start": {
        "character": 0,
        "line": 10
      }
    },
    "uri": "file://$PROJECT_ROOT/src/test/fixtures/goto/nested_const_single.rb"
  },
  {
    "range": {
      "end": {
        "character": 18,
        "line": 11
      },
      "start": {
        "character": 0,
        "line": 11
      }
    },
    "uri": "file://$PROJECT_ROOT/src/test/fixtures/goto/nested_const_single.rb"
  }
]
