src/test/snapshots/ruby_fast_lsp__test__integration_test__class_body_helper_method_refs.snap
---
source: src/test/integration_test.rs
expression: value
---
[
  {
    "range": {
      "end": {
        "character": 22,
        "line": 5
      },
      "start": {
        "character": 2,
        "line": 5
      }
    },
    "uri": "file://$PROJECT_ROOT/src/test/fixtures/method_context_resolution.rb"
  }
]
