src/test/snapshots/ruby_fast_lsp__test__integration_test__constant_in_hash_key.snap
---
source: src/test/integration_test.rs
expression: value
---
[
  {
    "range": {
      "end": {
        "character": 13,
        "line": 0
      },
      "start": {
        "character": 0,
        "line": 0
      }
    },
    "uri": "file://$PROJECT_ROOT/src/test/fixtures/goto/constant_in_hash_key.rb"
  }
]
