src/test/snapshots/ruby_fast_lsp__test__integration_test__cross_module_method_refs.snap
---
source: src/test/integration_test.rs
expression: value
---
[
  {
    "range": {
      "end": {
        "character": 17,
        "line": 3
      },
      "start": {
        "character": 4,
        "line": 3
      }
    },
    "uri": "file://$PROJECT_ROOT/src/test/fixtures/goto/module_method_cross_ref.rb"
  },
  {
    "range": {
      "end": {
        "character": 17,
        "line": 27
      },
      "start": {
        "character": 4,
        "line": 27
      }
    },
    "uri": "file://$PROJECT_ROOT/src/test/fixtures/goto/module_method_cross_ref.rb"
  },
  {
    "range": {
      "end": {
        "character": 17,
        "line": 27
      },
      "start": {
        "character": 4,
        "line": 27
      }
    },
    "uri": "file://$PROJECT_ROOT/src/test/fixtures/goto/module_method_cross_ref.rb"
  },
  {
    "range": {
      "end": {
        "character": 17,
        "line": 3
      },
      "start": {
        "character": 4,
        "line": 3
      }
    },
    "uri": "file://$PROJECT_ROOT/src/test/fixtures/goto/module_method_cross_ref.rb"
  },
  {
    "range": {
      "end": {
        "character": 17,
        "line": 27
      },
      "start": {
        "character": 4,
        "line": 27
      }
    },
    "uri": "file://$PROJECT_ROOT/src/test/fixtures/goto/module_method_cross_ref.rb"
  },
  {
    "range": {
      "end": {
        "character": 17,
        "line": 27
      },
      "start": {
        "character": 4,
        "line": 27
      }
    },
    "uri": "file://$PROJECT_ROOT/src/test/fixtures/goto/module_method_cross_ref.rb"
  }
]
