src/test/snapshots/ruby_fast_lsp__test__integration_test__foo_class_defs.snap
---
source: src/test/integration_test.rs
expression: value
---
[
  {
    "range": {
      "end": {
        "character": 5,
        "line": 7
      },
      "start": {
        "character": 2,
        "line": 3
      }
    },
    "uri": "file://$PROJECT_ROOT/src/test/fixtures/def_ref/single_file/single.rb"
  }
]
